--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body, h1, h2, ul{
+body, h1, h2, ul, p{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -32,7 +32,7 @@ header,
 
 .main-menu{
     display: flex;
-    column-gap: 1em;
+    column-gap: 1.5em;
     justify-content: flex-end;
     align-items: center;
 }
@@ -78,12 +78,14 @@ h1{
     font-size: 3rem;
     font-weight: 900;
     line-height: 1;
+    margin-bottom: .125em;
 }
 
 .hero-info p{
     font-size: 1.125rem;
     color: #e5e7eb;
     line-height: 1.25;
+    margin-bottom: .5em;
 }
 
 .img-placeholder-lg{
@@ -111,4 +113,44 @@ h1{
 .hero-info .sign-up:hover,
 .hero-info .sign-up:focus{
     background-color: hsl(217, 91%, 40%);
+}
+
+.random .container{
+    flex-direction: column;
+    padding: 3.125em 0;
+}
+
+.box-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2.75em;
+}
+
+.img-placeholder-sm{
+    width: 150px;
+    height: 150px;
+    border: 4px solid #3882f6;
+    border-radius: 12px;
+    margin-bottom: .5em;
+}
+
+.box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.subtext{
+    width: 150px;
+    font-weight: 300;
+}
+
+h2{
+    font-size: 2.25rem;
+    font-weight: 900;
+    color: #1F2937;
+    margin-bottom: 3.125rem;
 }
