--- a/style.css
+++ b/style.css
@@ -1,14 +1,55 @@
 /*----------------------*/
-/*Reset                 */
+/* Custom Properties    */
+/*----------------------*/
+:root{
+    /* colors */
+    --clr-dark: #1F2937;
+    --clr-light: #F9FaF8;
+    --clr-med: #e5e7eb;
+    --clr-accent: #3882F6;
+
+    /* font-sizes */
+    --fs-400: 1.125rem;
+    --fs-500: 1.5rem;
+    --fs-600: 2.25rem;
+    --fs-700: 3rem;
+
+    /* font-families */
+    --ff-primary: 'Roboto', Arial, sans-serif;
+
+    /* font-weights */
+    --fw-300: 300;
+    --fw-400: 400;
+    --fw-700: 700;
+    --fw-900: 900;
+
+    /* border radius */
+    --br-sm: 6px;
+    --br-lg: 12px;
+
+}
+
+
+/*----------------------*/
+/* Reset                */
 /*----------------------*/
 *{
     box-sizing: border-box;
 }
 body, h1, h2, ul, p{
     margin: 0;
+    padding: 0;
+}
+
+h1, h2{
+    font-weight: var(--fw-900);
 }
 
 body{
+    font-family: var(--ff-primary);
+    font-size: var(--fs-400);
+    color: var(--clr-dark);
+    background-color: var(--clr-light);
     line-height: 1.5;
 }
 
@@ -16,12 +57,108 @@ button{
     font: inherit;
 }
 
+a {
+    text-decoration: none;
+    color: var(--clr-light);
+}
+
+/*----------------------*/
+/* Utility Classes      */
+/*----------------------*/
+
+/* general */
+.flex{
+    display: flex;
+    align-items: center;
+    gap: var(--gap, 1rem);
+}
+
+.container{
+    margin: 0 auto;
+    padding: 0 2em;
+    max-width: 70rem;
+}
+
+/* colors */
+.bg-dark { background-color: var(--clr-dark); }
+.bg-med { background-color: var(--clr-med); }
+.bg-light { background-color: var(--clr-light); }
+.bg-accent { background-color: var(--clr-accent); }
+
+.text-dark { color: var(--clr-dark); }
+.text-light { color: var(--clr-light); }
+
+/* typography */
+.ff-primary { font-family: var(--ff-primary); }
+
+.fs-400 { font-size: var(--fs-400); }
+.fs-500 { font-size: var(--fs-500); }
+.fs-600 { font-size: var(--fs-600); }
+.fs-700 { font-size: var(--fs-700); }
+
+.fs-600,
+.fs-700{
+    line-height: 1.1;
+}
+
+.fw-300{ font-weight: var(--fw-300); }
+.fw-400{ font-weight: var(--fw-400); }
+.fw-700{ font-weight: var(--fw-700); }
+.fw-900{ font-weight: var(--fw-900); }
 
 
-body{
+/*----------------------*/
+/* Components           */
+/*----------------------*/
+
+/* navigation and buttons */
+.main-nav{
+    margin-left: auto;
+}
+
+.main-nav__menu{
+    --gap: 1.5rem;
+}
+
+.main-nav li{
+    list-style-type: none;
+}
+
+.main-nav a:hover,
+.main-nav a:focus{
+    text-decoration: underline;
+}
+
+.button {
+    padding: .25em 1.875em;
+    font-size: var(--fs-400);
+    font-weight: var(--fw-700);
+    color: var(--clr-light);
+    background-color: var(--clr-accent);
+    border: 0;
+    border-radius: var(--br-sm);
+}
+
+.button--border{
+    border: 2px solid var(--clr-light);
+}
+
+.button:hover,
+.button:focus{
+    color: var(--text-dark);
+    background-color: var(--clr-med);
+}
+
+/* ----- Header ----- */
+
+.primary-header{
+    padding-block: 1rem;
+}
+
+/* body{
     font-family: 'Roboto', Arial, sans-serif;
     color: #333;
-}
+} 
 
 header{
     padding: 1em 0;
@@ -231,4 +368,4 @@ footer{
     background-color: #1F2937;
     color: #e5e7eb;
     text-align: center;
-}
+} */
