--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@
 
 }
 
-
 /*----------------------*/
 /* Reset                */
 /*----------------------*/
@@ -52,12 +51,10 @@ body{
     font-size: var(--fs-400);
     color: var(--clr-dark);
     background-color: var(--clr-light);
-    line-height: 1.4;
 }
 
 h1, h2{
     font-weight: var(--fw-900);
-    line-height: 1;
 }
 
 button{
@@ -93,7 +90,7 @@ a {
     max-width: 51.5rem;
 }
 
-.flow > * + * { margin-top: var(--flow-space, 1rem);}
+.flow > * + * { margin-top: var(--flow-space, .75rem);}
 
 .py-1 { padding-block: var(--py-1); }
 .py-2 { padding-block: var(--py-2); }
@@ -107,11 +104,6 @@ a {
 .fs-500 { font-size: var(--fs-500); }
 .fs-600 { font-size: var(--fs-600); }
 .fs-700 { font-size: var(--fs-700); }
-
-.fs-600,
-.fs-700{
-    line-height: 1.1;
-}
 
 .fw-300{ font-weight: var(--fw-300); }
 .fw-400{ font-weight: var(--fw-400); }
@@ -143,6 +135,7 @@ a {
 /* typography */
 h1{
     font-size: var(--fs-700);
+    line-height: 1;
 }
 
 h2{
@@ -168,7 +161,8 @@ h2{
 }
 
 .button {
-    padding: .25em 1.875em;
+    cursor: pointer;
+    padding: .75em 2.25em;
     font-size: var(--fs-400);
     font-weight: var(--fw-700);
     color: var(--clr-light);
@@ -184,10 +178,14 @@ h2{
 .button:hover,
 .button:focus{
     color: var(--clr-dark);
-    background-color: var(--clr-med);
+    background-color: var(--clr-light);
 }
 
 /* --- Hero --- */
+.hero > div.container{
+    --gap:3rem
+}
+
 .img-placeholder-lg{
     justify-content: center;
     flex-basis: 100%;
@@ -212,4 +210,9 @@ h2{
 
 .info-boxes{
     margin-top: 3.5rem;
+}
+
+/* --- CTA --- */
+.cta .container--sm{
+    justify-content: space-between;
 }
